<resources>
    <string name="app_name">TipCalculator</string>
    <string name="billTotal">Bill Total</string>
    <string name="billVal">Enter Bill Value</string>
    <string name="tipPer">Tip %</string>
    <string name="tenPer">10%</string>
    <string name="fifteenPer">15%</string>
    <string name="eighteenPer">18%</string>
    <string name="custom">Custom</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="twentyFivePer">25%</string>
    <string name="myBankAccount">0.00</string>
    <string name="gottaGo">Exit</string>
</resources>
